--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,24 @@
 /* You can add global styles to this file, and also import other style files */
 
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; background-color: rgba($color: #000000, $alpha: 0.01);}
+.center-form-main {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100vw;
+    height: 100vh;
+
+    mat-card {
+        margin: 25px;
+    }
+
+    mat-form-field {
+        width: 100%;
+    }
+}
+
+.container {
+    margin: 0 auto;
+    width: 1170px;
+}
