App root structure changes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,12 @@
+<mat-toolbar *ngIf="userService.currentUser$ | async">
+    <span>User Management</span>
+    <span class="spacer"></span>
+    <button mat-button [routerLink]="['/user']" *ngIf="(userService.currentUser$ | async)?.role === 'admin'">
+        Users
+    </button>
+    <button mat-button (click)="logout()">
+        Logout
+    </button>
+</mat-toolbar> 
 <router-outlet></router-outlet>
 <app-loader></app-loader>
